1-OkHttpManager 增加特殊请求头；2-新增SHA256算法 用于请求头加密；3-任务中心完善；4-扫描入口重构包裹打包、新增新建包裹功能；5-新增司机角色；

--- a/app/src/main/res/layout/activity_express_search.xml
+++ b/app/src/main/res/layout/activity_express_search.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/bg_gray"
     android:orientation="vertical">
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/nestScroll"
@@ -12,17 +13,20 @@
             android:layout_height="match_parent"
 
             android:orientation="vertical">
+
             <com.baidu.mapapi.map.MapView
+                android:visibility="visible"
                 android:id="@+id/bmapView"
                 android:layout_width="match_parent"
-                android:layout_height="630dp"></com.baidu.mapapi.map.MapView>
+                android:layout_height="400dp"></com.baidu.mapapi.map.MapView>
             <!--<View-->
                 <!--android:clickable="false"-->
                 <!--android:layout_width="match_parent"-->
                 <!--android:layout_height="300dp"></View>-->
             <android.support.v7.widget.RecyclerView
                 android:background="@drawable/bg_round_normal"
-                android:layout_marginTop="300dp"
+                android:layout_below="@id/filter_edit"
+                android:layout_marginTop="280dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
                 android:paddingTop="@dimen/size_16sp"
@@ -31,7 +35,22 @@
                 android:id="@+id/rv_trace"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
-
+            <com.extrace.util.layout.ClearEditText
+                android:layout_marginTop="@dimen/title_height"
+                android:layout_marginLeft="@dimen/padding"
+                android:layout_marginRight="@dimen/padding"
+                android:id="@+id/filter_edit"
+                android:layout_width="match_parent"
+                android:layout_height="55dp"
+                android:paddingLeft="@dimen/size_14sp"
+                android:paddingRight="@dimen/size_14sp"
+                android:inputType="number"
+                android:background="@drawable/bg_round_normal_trans"
+                android:drawableLeft="@mipmap/ic_search_green"
+                android:singleLine="true"
+                android:hint="@string/hint_enter_express_id_for_search"
+                android:maxLines="1"
+                android:textSize="@dimen/size_16sp" />
         </RelativeLayout>
 
     </android.support.v4.widget.NestedScrollView>
@@ -42,26 +61,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"></com.extrace.util.EmptyView>
     <com.extrace.util.TitleLayout
-        android:layout_marginTop="@dimen/size_16sp"
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"></com.extrace.util.TitleLayout>
 
 
-    <com.extrace.util.layout.ClearEditText
-        android:layout_marginTop="@dimen/size_14sp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="@dimen/size_14sp"
-        android:id="@+id/filter_edit"
-        android:layout_width="match_parent"
-        android:layout_height="55dp"
-        android:paddingLeft="@dimen/size_14sp"
-        android:paddingRight="@dimen/size_14sp"
-        android:inputType="number"
-        android:background="@drawable/bg_round_normal_trans"
-        android:drawableLeft="@mipmap/ic_search_green"
-        android:singleLine="true"
-        android:hint=" 输入准确快递单号查询"
-        android:maxLines="1"
-        android:textSize="15dp" />
+
 </RelativeLayout>
