--- a/app/src/main/res/layout/activity_scan_barcode.xml
+++ b/app/src/main/res/layout/activity_scan_barcode.xml
@@ -25,12 +25,14 @@
 
             android:orientation="horizontal">
             <TextView
+                android:id="@+id/tv_courier_name_tag"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="快递员"
                 android:textSize="@dimen/size_18sp"/>
             <TextView
-                android:paddingLeft="10dp"
+                android:paddingLeft="@dimen/padding"
+                android:paddingRight="@dimen/padding"
                 android:id="@+id/tv_courier_name"
                 android:textSize="@dimen/size_16sp"
                 android:layout_width="wrap_content"
@@ -52,7 +54,7 @@
                 android:textSize="@dimen/size_16sp"
                 android:id="@+id/tv_tel"
                 android:paddingLeft="10dp"
-                android:text="111111"/>
+                android:text=""/>
             <TextView
                 android:id="@+id/tv_equip_tag"
                 android:layout_width="wrap_content"
@@ -84,7 +86,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/size_16sp"
                 android:id="@+id/tv_site"
-                android:text="zzu"/>
+                android:text=""/>
         </RelativeLayout>
     </LinearLayout>
     <ScrollView
@@ -117,7 +119,8 @@
                     <TextView
                         style="@style/my_main_function"
                         android:textColor="@color/colorGray"
-                        android:textSize="12dp"/>
+                        android:textSize="12dp"
+                        android:text="扫描/填写快递单"/>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="0dp"
@@ -136,7 +139,7 @@
                         style="@style/my_main_function"
                         android:textColor="@color/colorGray"
                         android:textSize="12dp"
-                        android:text=""/>
+                        android:text="快件→包裹"/>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="0dp"
@@ -147,7 +150,7 @@
                     android:orientation="vertical">
                     <ImageView
                         style="@style/ic_me_page"
-                        android:src="@mipmap/icon_express_send_zhuangche_blue"/>
+                        android:src="@mipmap/icon_express_send"/>
                     <TextView
                         style="@style/my_main_function"
                         android:text="装货扫描" />
@@ -155,7 +158,7 @@
                         style="@style/my_main_function"
                         android:textColor="@color/colorGray"
                         android:textSize="12dp"
-                        android:text="发件扫描"/>
+                        android:text="(包裹)发件扫描"/>
 
                 </LinearLayout>
 
@@ -264,22 +267,23 @@
                     android:layout_weight="1"
                     style="@style/menu_function_style"
                     android:layout_height="wrap_content"
-                    android:visibility="invisible"
+                    android:visibility="visible"
                     android:orientation="vertical">
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:id="@+id/ly_function8"
                         android:orientation="vertical">
                         <ImageView
                             style="@style/ic_me_page"
-                            android:src="@mipmap/icon_more"/>
+                            android:src="@mipmap/icon_createpackage"/>
                         <TextView
                             style="@style/my_main_function"
-                            android:text="@string/title_section1" />
+                            android:text="创建包裹" />
                         <TextView
                             style="@style/my_main_function"
                             android:textColor="@color/colorGray"
+                            android:text="打包前新建包裹"
                             android:textSize="12dp" />
                     </LinearLayout>
                     <TextView
