--- a/app/src/main/res/layout/fragment_list_extask_item.xml
+++ b/app/src/main/res/layout/fragment_list_extask_item.xml
@@ -2,42 +2,56 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="@dimen/size_10sp"
-    android:paddingLeft="@dimen/size_10sp"
-    android:paddingRight="@dimen/size_10sp"
-    android:orientation="horizontal" >
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:padding="@dimen/size_5dp"
+    android:orientation="horizontal">
 
 
     <RelativeLayout
-        android:padding="5dip"
-        android:layout_width="fill_parent"
+        android:layout_marginBottom="@dimen/size_5dp"
+        android:padding="@dimen/size_5dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_round_normal"
-        android:layout_marginBottom="@dimen/size_16sp"
-        >
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/expressId"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:paddingLeft="@dimen/size_5dp"
+            android:paddingRight="@dimen/size_5dp"
+            android:textSize="@dimen/size_16sp"
+            android:text="快递单号"
+            android:background="@drawable/menu_bg_normal"
+            android:singleLine="true"
+            android:gravity="left"
+            android:textColor="@color/colorOrange"/>
         <LinearLayout
             android:id="@+id/l1"
+            android:layout_below="@id/expressId"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
             <RelativeLayout
                 android:padding="2dip"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
                 >
+
                 <TextView
                     android:id="@+id/name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginTop="2dp"
                     android:layout_weight="1"
-                    android:padding="2dip"
-                    android:textSize="@dimen/size_18sp"
-                    android:text="收件人"
-                    android:singleLine="true"
                     android:gravity="center"
-                    />
+                    android:padding="2dip"
+                    android:singleLine="true"
+                    android:text="收件人"
+                    android:textSize="@dimen/size_18sp" />
 
                 <TextView
                     android:id="@+id/tel"
@@ -58,7 +72,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
                 android:padding="2dip"
-                android:textSize="16sp"
+                android:textSize="@dimen/size_16sp"
                 android:layout_weight="1"
                 android:text="@string/title_addr_code"
                 android:singleLine="true"
@@ -82,7 +96,6 @@
                     android:id="@+id/msg"
                     android:clickable="true"
                     android:layout_below="@+id/edtPostCode"
-                    android:layout_marginTop="10dip"
                     android:background="@color/white"
                     android:textSize="20sp"
                     android:textColor="@color/colorPrimaryLight"
@@ -100,7 +113,6 @@
                 <TextView
                     android:id="@+id/phone"
                     android:clickable="true"
-                    android:layout_marginTop="10dip"
                     android:layout_below="@+id/edtPostCode"
                     android:background="@color/white"
                     android:textSize="20sp"
