--- a/app/src/main/res/layout/fragment_main_menu.xml
+++ b/app/src/main/res/layout/fragment_main_menu.xml
@@ -1,33 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_below="@+id/appbar"
     android:orientation="vertical">
-
     <LinearLayout
+        android:paddingTop="@dimen/size_16sp"
+        android:paddingBottom="@dimen/size_10sp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary">
+        <TextView
+            android:gravity="center"
+            android:textAlignment="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:textSize="@dimen/size_18sp"
+            android:text="@string/app_name"/>
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/home_menu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
         android:orientation="vertical">
-        <LinearLayout
-            android:paddingTop="@dimen/size_16sp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorPrimary">
-            <TextView
-                android:gravity="center"
-                android:textAlignment="center"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:textSize="@dimen/size_18sp"
-                android:text="@string/app_name"/>
-        </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="10dp"
             android:paddingBottom="5dp"
             android:layout_gravity="center_vertical"
             android:gravity="bottom"
@@ -59,8 +60,8 @@
                 android:orientation="vertical">
                 <ImageView
                     style="@style/ic_me_page"
-                    android:layout_width="65dp"
-                    android:layout_height="65dp"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:src="@mipmap/icon_scan_bar_white"
                     android:contentDescription="@string/scan_gun"/>
                 <TextView
@@ -223,4 +224,86 @@
     </LinearLayout>
 
 
-</ScrollView>
+    <RelativeLayout
+        android:layout_below="@+id/home_menu"
+        android:visibility="gone"
+        android:id="@+id/driver_home_menu"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="@dimen/size_10sp">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_round_normal_white"
+        android:gravity="center"
+        android:layout_centerInParent="true"
+        android:padding="@dimen/size_16sp">
+
+        <LinearLayout
+            android:id="@+id/driver_tab_menu1"
+            style="@style/menu_function_style"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_toLeftOf="@+id/driver_tab_menu3"
+            android:orientation="vertical">
+
+            <ImageView
+                style="@style/ic_me_page"
+                android:src="@mipmap/ic_search_green" />
+
+            <TextView
+                style="@style/my_main_function"
+                android:textColor="@color/colorPrimary"
+                android:text="@string/action_search" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/driver_tab_menu3"
+            style="@style/menu_function_style"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/bg_round_normal_green"
+            android:orientation="vertical"
+            android:paddingLeft="@dimen/padding"
+            android:paddingRight="@dimen/padding">
+
+            <ImageView
+                style="@style/ic_me_page"
+                android:src="@mipmap/icon_scan_bar_white" />
+
+            <TextView
+                style="@style/my_main_function"
+                android:text="装货扫描"
+                android:textColor="@color/white" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/driver_tab_menu2"
+            style="@style/menu_function_style"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/driver_tab_menu3"
+            android:layout_alignParentRight="true"
+            android:layout_toRightOf="@+id/driver_tab_menu3"
+            android:gravity="center_vertical"
+            android:orientation="vertical">
+
+            <ImageView
+                style="@style/ic_me_page"
+                android:src="@drawable/menu_dispatch" />
+
+            <TextView
+                style="@style/my_main_function"
+                android:textColor="@color/colorPrimary"
+                android:text="@string/action_my_message" />
+
+        </LinearLayout>
+    </RelativeLayout>
+    </RelativeLayout>
+</LinearLayout>
