1-首页界面重构，扫描功能全部放在首页，并取消了二级扫描入口界面；2-司机、快递员权限控制；3-任务中心优化，修复了上一版的bug。

--- a/app/src/main/res/layout/activity_add_package.xml
+++ b/app/src/main/res/layout/activity_add_package.xml
@@ -118,6 +118,6 @@
             android:layout_height="wrap_content"
             android:textColor="@color/colorPrimaryLight"
             android:textSize="20dp"
-            android:text="@string/action_ok" />
+            android:text="创建包裹" />
     </LinearLayout>
 </RelativeLayout>
