--- a/app/src/main/res/layout/item_package.xml
+++ b/app/src/main/res/layout/item_package.xml
@@ -2,19 +2,27 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/menu_bg_normal">
-    <TextView
-    android:gravity="center_vertical"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:textSize="@dimen/size_18sp"
-    android:id="@+id/left"
-    android:text="快递编号：" />
-    <TextView
-        android:gravity="center_vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:textSize="@dimen/size_18sp"
-        android:id="@+id/expressid"
-        android:text="" />
+    android:background="@color/bg_gray"
+    android:padding="@dimen/size_5dp">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_round_normal"
+        android:padding="@dimen/size_5dp">
+        <TextView
+            android:gravity="center_vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/size_18sp"
+            android:id="@+id/left"
+            android:text="快递编号：" />
+        <TextView
+            android:gravity="center_vertical"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:textSize="@dimen/size_18sp"
+            android:id="@+id/expressid"
+            android:text="" />
+    </LinearLayout>
+
 </LinearLayout>
