--- a/app/src/main/res/layout/item_wrap_package.xml
+++ b/app/src/main/res/layout/item_wrap_package.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:padding="@dimen/size_5dp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/bg_gray"
-    android:padding="@dimen/size_5dp">
+    android:layout_height="wrap_content">
     <RelativeLayout
-        android:background="@drawable/bg_round_normal"
         android:padding="@dimen/size_10sp"
+        android:background="@drawable/bg_round_normal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
     <TextView
@@ -18,7 +18,7 @@
         android:text="快递编号：" />
     <TextView
         android:gravity="center_vertical"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/left"
         android:textSize="@dimen/size_18sp"
@@ -36,7 +36,7 @@
     <TextView
         android:layout_marginTop="@dimen/size_5dp"
         android:gravity="center_vertical"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/expressid"
         android:layout_toRightOf="@id/right"
@@ -44,4 +44,4 @@
         android:id="@+id/expressStatus"
         android:text="5555" />
     </RelativeLayout>
-</LinearLayout>
+</RelativeLayout>
